# speicher-analyse

./: .gitignore  .mcp.json  CLAUDE.md  README.md  claude_mcp_settings.json  electron-builder.yml  launch.js  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
appsvibe-codingspeicher_analysetoolstest-server/: package-lock.json  package.json
data/: oui.json
docs/: aenderungsprotokoll.md
main/: admin.js  api-server.js  autostart.js  battery.js  bloatware.js  cleanup.js  cmd-utils.js  compat.js  deep-search-worker.js  device-identify.js  drives.js  duplicate-worker.js  duplicates.js  exclusions.js  explorer.js  export.js  file-ops.js  file-tags.js  global-hotkey.js  ipc-handlers.js  logger.js  main.js  mcp-bridge.js  mdns-scanner.js  menu.js  network-history.js  network-recording.js  network-scanner.js  network.js  old-files.js  optimizer.js  oui-database.js  preferences.js  preload.js  preview.js  privacy.js  registry.js  scan-compare.js  scanner-worker.js  scanner.js  (+13 more)
mcp/: server.mjs
mcp-wrapper/: cdp-final-verify.js  index.js  package-lock.json  package.json  verify-wcag.js  verify-wcag2.js  wcag-gate.js  wcag-static-check.js
renderer/: index.html
scripts/: rebuild-pty.js
src/: App.tsx  index.html  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  oui.rs  ps.rs  scan.rs  scan_history.rs  undo.rs
src-tauri/src/commands/: cmd_files.rs  cmd_misc.rs  cmd_network.rs  cmd_pdf.rs  cmd_privacy.rs  cmd_scan.rs  cmd_system.rs  cmd_terminal.rs  mod.rs
(+164 files in other folders)
