[package]
name = "speicher-analyse"
version = "7.2.1"
description = "Speicher Analyse - Disk Space Analyzer & System Optimizer"
authors = ["Speicher Analyse"]
edition = "2021"

[lib]
name = "speicher_analyse_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "fs", "io-util", "time", "macros"] }
chrono = "0.4"
base64 = "0.22"
walkdir = "2"
bincode = "1"
zstd = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
portable-pty = "0.9"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
